--- a/board/src/main/webapp/WEB-INF/web.xml
+++ b/board/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,8 @@
   version="4.0"
   metadata-complete="false">
 
+
+
 <listener>
 	<listener-class>jdbc.DBCPInitListener</listener-class>
 </listener>
@@ -30,12 +32,46 @@
 	<param-name>poolConfig</param-name>
 	<param-value>
 	 jdbcdriver=com.mysql.jdbc.Driver
-	 jdbcUrl=jdbc:mysql://localhost:3306/guestbook?characterEncoding=utf8
+	 jdbcUrl=jdbc:mysql://localhost:3306/board?characterEncoding=utf8
 	 dbUser=jspexam
 	 dbPass=jsppw
-	 poolName=guestbook
+	 validationQuery=select 1
+	 minIdle=3
+	 maxTotal=30
+	 poolName=board
 	</param-value>
 </context-param>
+
+<filter>
+	<filter-name>encodingFilter</filter-name>
+	<filter-class>util.CharacterEncodingFilter</filter-class>
+	<init-param>
+		<param-name>encoding</param-name>
+		<param-value>utf-8</param-value>
+	</init-param>
+</filter>
+
+<filter-mapping>
+	<filter-name>encodingFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
+
+<servlet>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<servlet-class>mvc.controller.ControllerUsingURI</servlet-class>
+	<init-param>
+		<param-name>configFile</param-name>
+		<param-value>
+			/WEB-INF/commandHandlerURI.properties
+		</param-value>
+	</init-param>
+	<load-on-startup>1</load-on-startup>
+</servlet>
+
+<servlet-mapping>
+	<servlet-name>ControllerUsingURI</servlet-name>
+	<url-pattern>*.do</url-pattern>
+</servlet-mapping>
 
 
 </web-app>
