--- a/board/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/board/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -4,3 +4,4 @@
 /changePwd.do=member.command.ChangePasswordHandler
 /article/write.do=article.command.WriteArticleHandler
 /article/list.do=article.command.ListArticleHandler
+/article/read.do=article.command.ReadArticleHandler
