--- a/board/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/board/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -5,3 +5,4 @@
 /article/write.do=article.command.WriteArticleHandler
 /article/list.do=article.command.ListArticleHandler
 /article/read.do=article.command.ReadArticleHandler
+/article/modify.do=article.command.ModifyArticleHandler
