--- a/board/src/main/webapp/WEB-INF/web.xml
+++ b/board/src/main/webapp/WEB-INF/web.xml
@@ -82,6 +82,7 @@
 	<url-pattern>/changePwd.do</url-pattern>
 	<url-pattern>/article/write.do</url-pattern>
 	<url-pattern>/article/modify.do</url-pattern>
+	<url-pattern>/article/delete.do</url-pattern>
 </filter-mapping>
 
 
